log
Wed, May 14, 2025  8:33:45 AM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:63:25: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                         add(list, new);
                         ^~~
sudoku.c:55:15: error: unused variable 'l' [-Werror=unused-variable]
     int i,j,k,l;
               ^
cc1.exe: all warnings being treated as errors
3f0e54c
Wed, May 14, 2025  8:35:21 AM: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:70:25: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                         add(list, new);
                         ^~~
cc1.exe: all warnings being treated as errors
cfa6f73
